- new parameters constraints/indicator/{maxsepacuts,maxsepacutsroot} to restrict the number of separated cuts

features:
- SCIPcomputeLPRelIntPoint with normtype='s' now uses homogenized LP for computing rel.int. point too and allow to
  set relaxrows = FALSE
- the check script now recognizes MIQCP and MINLP instances

SCIP version 2.1.1
===============

performance improvements:
- revised pseudo objective propagator;

features:
- the pseudo objective propagator can be forced to propagate if active pricers are present; this can be done 
  if for all (known or unknown) variables follows that: they have positive (negative) objective coefficient 
  and the global lower (upper) bound is zero.

fixed bugs:
- fixed bug in reader_mps.c: INTEND marker is now also written, if COLUMNS section ends with non-continous variables
- fixed numeric issue in aggregations
- fixed pseudo cost computation
- pseudo objective propagator does not propagate it active pricers are present
- fixed constraint flags evaluation within the ZIMPL reader (reader_zpl.c)
- fixed bug in SCIPmakeIndicatorFeasible() in cons_indicator.c
- fixed bug with conflict clause modification in cons_indicator
- fixed bug in cons_bounddisjunction with uninitialized return values
- fixed bug when copying problem data in c++ case returned with the result SCIP_DIDNOTRUN
- fixed bug with setting type of slack variables to be implicitly integral
- fixed computation of counter which state the changes since the last call of a presolver

parameters
- changed parameter "propagating/pseudoobj/maxcands" to "propagating/pseudoobj/minuseless" (see prop_pseudoobj.h)
  due to revision of the pseudo objective propagator


SCIP version 2.1.0
===============

interface:

- new method SCIPstartSolvingTime() and SCIPstopSolvingTime() which can be used to start or stop the solving time clock
- new methods SCIPcheckCumulativeCondition(), SCIPpropCumulativeCondition, and SCIPrespropCumulativeCondition in