@@ -48,6 +48,7 @@ features:
 - SCIPcomputeLPRelIntPoint with normtype='s' now uses homogenized LP for computing rel.int. point too and allow to
   set relaxrows = FALSE
 - the check script now recognizes MIQCP and MINLP instances
+- new column showing the pseudo objective value
 
 SCIP version 2.1.1
 ===============
